test/files/neg/t6675.check
t6675.scala:10: warning: object X expects 3 patterns to hold (Int, Int, Int) but crushing into 3-tuple to fit single pattern (SI-6675)
  "" match { case X(b) => b } // should warn under -Xlint. Not an error because of SI-6111
                  ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
